fix(sonar): fix blocker, security, high, and medium severity issues for beta release (#1135)
* fixed security & reliability issues

Signed-off-by: cyber-titan <chinmai.vemuri@infosys.com>

* fix SonarCloud blocker issues in test classes

Signed-off-by: cyber-titan <chinmai.vemuri@infosys.com>

* fixed high severity issues

Signed-off-by: cyber-titan <chinmai.vemuri@infosys.com>

* fix(sonar): replace generic exceptions, remove unused code, and fix stream usage

Signed-off-by: cyber-titan <chinmai.vemuri@infosys.com>

* fix(sonar): address medium severity issues across service and test layers

Signed-off-by: cyber-titan <chinmai.vemuri@infosys.com>

* fix(sonar): resolve medium severity issues

Signed-off-by: cyber-titan <chinmai.vemuri@infosys.com>

* fix(sonar): address review comments

Signed-off-by: cyber-titan <chinmai.vemuri@infosys.com>

* fix: resolve cherry-pick merge issues — @RequestBody ambiguity and Map return type

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Signed-off-by: cyber-titan <chinmai.vemuri@infosys.com>

* fix(sonar): migrate CredentialsController to GlobalExceptionHandler, fix response types

Signed-off-by: cyber-titan <chinmai.vemuri@infosys.com>

* fix(sonar): preserve backward compatible status codes

Signed-off-by: cyber-titan <chinmai.vemuri@infosys.com>

* feat(credentials): use controller-level exception handlers to preserve ResponseWrapper contract with inji-web

Signed-off-by: cyber-titan <chinmai.vemuri@infosys.com>

* refactor(credentials): delegate controller exception handlers to Utilities.handleErrorResponse

Signed-off-by: cyber-titan <chinmai.vemuri@infosys.com>

---------

Signed-off-by: cyber-titan <chinmai.vemuri@infosys.com>
Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>